Update style.css (fix whitespace bug)

--- a/style.css
+++ b/style.css
@@ -24,11 +24,9 @@ body, * {
 }
 
 body {
-	padding: 0;
+	padding: 0 !important;
 	margin: 0 !important;
-	margin-top: 0 !important;
 	position: relative;
-	top: -20px;
 	overflow: auto;
 }
 
@@ -46,6 +44,7 @@ body > header#main-si-header {
 body > header#main-si-header > h1 {
 	padding-top: 50px;
 	padding-bottom: 50px;
+	margin: 0;
 }
 body > header#main-si-header > #si-tab-holder {
 	width: 100%;
